# adxlite

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md  instructions.md
.github/instructions/: add-kql-function.instructions.md  add-kql-operator.instructions.md  debugging-kql-translation.instructions.md  environment-management.instructions.md  project-setup.instructions.md  writing-tests.instructions.md
.github/workflows/: docs.yml  publish.yml  tests.yml
adxlite/: README.md  pyproject.toml
adxlite/src/adxlite/: client.py  exceptions.py
adxlite/src/adxlite/engine/: executor.py  pandas_ops.py  planner.py
adxlite/src/adxlite/parser/: __init__.py  ast_nodes.py  parser.py  tokenizer.py
adxlite/src/adxlite/storage/: database.py  kql_types.py  udf.py
adxlite/src/adxlite/translator/: __init__.py  functions.py  sql_utils.py  translator.py
adxlite/tests/integration/: __init__.py  test_let_union_join.py  test_queries.py
adxlite/tests/unit/: test_parser.py  test_parser_advanced.py  test_tokenizer.py  test_udf.py
adxpandas/: README.md  pyproject.toml
adxpandas/src/adxpandas/: __init__.py  client.py  exceptions.py  functions.py  magic.py  render.py  wrap.py
adxpandas/src/adxpandas/engine/: __init__.py  executor.py  pandas_ops.py
adxpandas/src/adxpandas/parser/: ast_nodes.py  parser.py  tokenizer.py
adxpandas/tests/: __init__.py
adxpandas/tests/integration/: __init__.py  test_aggregates.py  test_complex_pipelines.py  test_corner_cases.py  test_datetime_functions.py  test_error_handling.py  test_in_between.py  test_join_advanced.py  test_json_functions.py  test_let_bindings.py  test_math_functions.py  test_negated_operators.py  test_parse_operator.py  test_queries.py  test_regex_extract.py  test_stress.py  test_string_functions.py  test_string_predicates.py
adxpandas/tests/unit/: __init__.py  test_magic.py  test_pandas_ops.py  test_parser.py  test_render.py  test_render_charts.py  test_wrap.py
docs/: index.md
docs/adxpandas/: index.md
docs/design/: architecture.md  decisions.md  let-union-join-tradeoffs.md  let-union-join.md  requirements.md  type-system.md
docs/guides/: advanced-queries.md  ingestion.md  quickstart.md
docs/reference/: api.md  functions.md  kql-syntax.md  limitations.md  operators.md
scripts/: clean.ps1  clean.sh  docs-build.ps1  docs-serve.ps1  docs-serve.sh  setup.ps1  setup.sh  test.ps1  test.sh
tests/: __init__.py
(+26 files in other folders)
