[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adxlite"
version = "0.2.2"
description = "A local SQLite-based database with Kusto Query Language (KQL) support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "adxpandas>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/richarddzh/adxlite"
Documentation = "https://richarddzh.github.io/adxlite/"
Repository = "https://github.com/richarddzh/adxlite"
Issues = "https://github.com/richarddzh/adxlite/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adxlite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
