[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adxpandas"
version = "0.1.0"
description = "Execute Kusto Query Language (KQL) queries over pandas DataFrames"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adxpandas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
