[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adxpandas"
version = "0.2.2"
description = "Execute Kusto Query Language (KQL) queries over pandas DataFrames"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/richarddzh/adxlite"
Documentation = "https://richarddzh.github.io/adxlite/"
Repository = "https://github.com/richarddzh/adxlite"
Issues = "https://github.com/richarddzh/adxlite/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
notebook = [
    "ipython>=7.0",
    "matplotlib>=3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adxpandas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
